--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <section>
         <h3>Su Sandar</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, officiis odit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, inventore cum tempore tempora in, vel ducimus expedita quaerat delectus maiores temporibus deserunt error porro magnam eligendi? Neque sed placeat ex veritatis. Magnam, enim.</p>
     </section>
 </body>
 </html>
